edits done - code link still needed

--- a/case-studies/posts/2023/08/21/references.bib
+++ b/case-studies/posts/2023/08/21/references.bib
@@ -132,3 +132,113 @@
   year = {2021},
   pages = {70-80}
 }
+
+@InProceedings{10.1007/978-3-030-03146-6_86,
+  author = {Parmar, A. and Katariya, R. and Patel, V.},
+  editor = {Hemanth, J. and Fernando, X. and Lafata, P. and Baig, Z.},
+  title = {A Review on Random Forest: An Ensemble Classifier},
+  booktitle = {International Conference on Intelligent Data Communication Technologies and Internet of Things (ICICI) 2018},
+  year = {2019},
+  publisher = {Springer International Publishing},
+  address = {Cham},
+  pages = {758--763},
+  abstract = {Ensemble classification is an information mining approach which utilizes various classifiers that cooperate for distinguishing the class label for new unlabeled thing from accumulation. Arbitrary Forest approach joins a few randomized choice trees and totals their forecasts by averaging. It has grabbed well-known attention from the community of research because of its high accuracy and superiority which additionally increase the performance. Now in this paper, we take a gander at improvements of Random Forest from history to till date. Our approach is to take a recorded view on the improvement of this prominently effective classification procedure. To begin with history of Random Forest to main technique proposed by Breiman then successful applications that utilized Random Forest and finally some comparison with other classifiers. This paper is proposed to give non specialists simple access to the principle thoughts of random forest.},
+  isbn = {978-3-030-03146-6}
+}
+
+@misc{mikolov2013efficient,
+  title={Efficient Estimation of Word Representations in Vector Space}, 
+  author={Tomas Mikolov and Kai Chen and Greg Corrado and Jeffrey Dean},
+  year={2013},
+  eprint={1301.3781},
+  archivePrefix={arXiv},
+  primaryClass={cs.CL}
+}
+
+@inproceedings{pennington-etal-2014-glove,
+  title = {{G}lo{V}e: Global Vectors for Word Representation},
+  author = {Pennington, J. and Socher, R. and Manning, C.},
+  booktitle = {Proceedings of the 2014 Conference on Empirical Methods in Natural Language Processing ({EMNLP})},
+  month = oct,
+  year = {2014},
+  address = {Doha, Qatar},
+  publisher = {Association for Computational Linguistics},
+  url = {https://aclanthology.org/D14-1162},
+  doi = {10.3115/v1/D14-1162},
+  pages = {1532--1543}
+}
+
+@article{SCHMIDHUBER201585,
+  title = {Deep learning in neural networks: An overview},
+  journal = {Neural Networks},
+  volume = {61},
+  pages = {85-117},
+  year = {2015},
+  issn = {0893-6080},
+  doi = {https://doi.org/10.1016/j.neunet.2014.09.003},
+  url = {https://www.sciencedirect.com/science/article/pii/S0893608014002135},
+  author = {J. Schmidhuber},
+  keywords = {Deep learning, Supervised learning, Unsupervised learning, Reinforcement learning, Evolutionary computation},
+  abstract = {In recent years, deep artificial neural networks (including recurrent ones) have won numerous contests in pattern recognition and machine learning. This historical survey compactly summarizes relevant work, much of it from the previous millennium. Shallow and Deep Learners are distinguished by the depth of their credit assignment paths, which are chains of possibly learnable, causal links between actions and effects. I review deep supervised learning (also recapitulating the history of backpropagation), unsupervised learning, reinforcement learning & evolutionary computation, and indirect search for short programs encoding deep and large networks.}
+}
+
+@article{10.5120/ijca2017915495,
+	author = {K. Potdar and T. S. Pardawala and C. D. Pai},
+	title = {A Comparative Study of Categorical Variable Encoding Techniques for Neural Network Classifiers},
+	journal = {International Journal of Computer Applications},
+	issue_date = {October 2017},
+	volume = {175},
+	number = {4},
+	month = {Oct},
+	year = {2017},
+	issn = {0975-8887},
+	pages = {7-9},
+	numpages = {3},
+	url = {http://www.ijcaonline.org/archives/volume175/number4/28474-2017915495},
+	doi = {10.5120/ijca2017915495},
+	publisher = {Foundation of Computer Science (FCS), NY, USA},
+	address = {New York, USA}
+}
+
+@inproceedings{10.1145/3443279.3443304,
+  author = {Wang, C. and Nulty, P. and Lillis, D.},
+  title = {A Comparative Study on Word Embeddings in Deep Learning for Text Classification},
+  year = {2021},
+  isbn = {9781450377607},
+  publisher = {Association for Computing Machinery},
+  address = {New York, NY, USA},
+  url = {https://doi.org/10.1145/3443279.3443304},
+  doi = {10.1145/3443279.3443304},
+  abstract = {Word embeddings act as an important component of deep models for providing input features in downstream language tasks, such as sequence labelling and text classification. In the last decade, a substantial number of word embedding methods have been proposed for this purpose, mainly falling into the categories of classic and context-based word embeddings. In this paper, we conduct controlled experiments to systematically examine both classic and contextualised word embeddings for the purposes of text classification. To encode a sequence from word representations, we apply two encoders, namely CNN and BiLSTM, in the downstream network architecture. To study the impact of word embeddings on different datasets, we select four benchmarking classification datasets with varying average sample length, comprising both single-label and multi-label classification tasks. The evaluation results with confidence intervals indicate that CNN as the downstream encoder outperforms BiLSTM in most situations, especially for document context-insensitive datasets. This study recommends choosing CNN over BiLSTM for document classification datasets where the context in sequence is not as indicative of class membership as sentence datasets. For word embeddings, concatenation of multiple classic embeddings or increasing their size does not lead to a statistically significant difference in performance despite a slight improvement in some cases. For context-based embeddings, we studied both ELMo and BERT. The results show that BERT overall outperforms ELMo, especially for long document datasets. Compared with classic embeddings, both achieve an improved performance for short datasets while the improvement is not observed in longer datasets.},
+  booktitle = {Proceedings of the 4th International Conference on Natural Language Processing and Information Retrieval},
+  pages = {37–46},
+  numpages = {10},
+  keywords = {Text Classification, Neural Networks, Word Embeddings},
+  location = {Seoul, Republic of Korea},
+  series = {NLPIR '20}
+}
+
+@article{aly2005survey,
+  title={Survey on multiclass classification methods, Tech. Rep},
+  author={Aly, M},
+  journal={California Institute of Technology},
+  year={2005}
+}
+
+@inproceedings{10.1145/967900.968151,
+  author = {Qian, G. and Sural, S. and Gu, Y. and Pramanik, S.},
+  title = {Similarity between Euclidean and Cosine Angle Distance for Nearest Neighbor Queries},
+  year = {2004},
+  isbn = {1581138121},
+  publisher = {Association for Computing Machinery},
+  address = {New York, NY, USA},
+  url = {https://doi.org/10.1145/967900.968151},
+  doi = {10.1145/967900.968151},
+  abstract = {Understanding the relationship among different distance measures is helpful in choosing a proper one for a particular application. In this paper, we compare two commonly used distance measures in vector models, namely, Euclidean distance (EUD) and cosine angle distance (CAD), for nearest neighbor (NN) queries in high dimensional data spaces. Using theoretical analysis and experimental results, we show that the retrieval results based on EUD are similar to those based on CAD when dimension is high. We have applied CAD for content based image retrieval (CBIR). Retrieval results show that CAD works no worse than EUD, which is a commonly used distance measure for CBIR, while providing other advantages, such as naturally normalized distance.},
+  booktitle = {Proceedings of the 2004 ACM Symposium on Applied Computing},
+  pages = {1232–1237},
+  numpages = {6},
+  keywords = {Cosine angle distance, vector model, Content based image retrieval, Euclidean distance, Inter-feature normalization},
+  location = {Nicosia, Cyprus},
+  series = {SAC '04}
+}
