--- a/case-studies/posts/2023/08/21/01-purchase-to-plate.qmd
+++ b/case-studies/posts/2023/08/21/01-purchase-to-plate.qmd
@@ -90,18 +90,14 @@ About the authors
 
 :::
 ::: {.g-col-12 .g-col-md-6}
-Copyright and licence
-: © 2023 Westat, Inc. No claims made to original US Government Works.
-
-<!-- <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> <img src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1" style="height:22px!important;vertical-align:text-bottom;"/><img src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1" style="height:22px!important;margin-left:3px;vertical-align:text-bottom;"/></a> This article is licensed under a Creative Commons Attribution 4.0 (CC BY 4.0) <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> International licence</a>.  -->
-
-Thumbnail photo by <a href="https://unsplash.com/@neonbrand?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Kenny Eliason</a> on <a href="https://unsplash.com/photos/SvhXD3kPSTY?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>.
+Image credit
+: Thumbnail photo by <a href="https://unsplash.com/@neonbrand?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Kenny Eliason</a> on <a href="https://unsplash.com/photos/SvhXD3kPSTY?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>.
 
 :::
 
 ::: {.g-col-12 .g-col-md-6}
 How to cite
-:   Carlson, Andrea, and Thea Palmer Zimmerman. 2023. "Food for Thought: The importance of the Purchase to Plate Suite." Real World Data Science, August 21, 2023. [URL](https://realworlddatascience.net/viewpoints/case-studies/posts/2023/08/21/01-purchase-to-plate.html)
+: Carlson, Andrea, and Thea Palmer Zimmerman. 2023. "Food for Thought: The importance of the Purchase to Plate Suite." Real World Data Science, August 21, 2023. [URL](https://realworlddatascience.net/viewpoints/case-studies/posts/2023/08/21/01-purchase-to-plate.html)
 :::
 :::
 :::
