edits done - repo link needs adding

--- a/case-studies/posts/2023/08/21/references.bib
+++ b/case-studies/posts/2023/08/21/references.bib
@@ -242,3 +242,57 @@
   location = {Nicosia, Cyprus},
   series = {SAC '04}
 }
+
+@article{DBLP:journals/corr/PangLGXWC16,
+  author = {L. Pang and Y. Lan and J. Guo and J. Xu and S. Wan and X. Cheng},
+  title = {Text Matching as Image Recognition},
+  journal = {CoRR},
+  volume = {abs/1602.06359},
+  year = {2016},
+  url = {http://arxiv.org/abs/1602.06359},
+  eprinttype = {arXiv},
+  eprint = {1602.06359},
+  timestamp = {Mon, 13 Aug 2018 16:47:25 +0200},
+  biburl = {https://dblp.org/rec/journals/corr/PangLGXWC16.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@InProceedings{10.1007/3-540-45014-9_1,
+  author = {Dietterich, T. G.},
+  title = {Ensemble Methods in Machine Learning},
+  booktitle = {Multiple Classifier Systems},
+  year = {2000},
+  publisher = {Springer Berlin Heidelberg},
+  address = {Berlin, Heidelberg},
+  pages = {1--15},
+  abstract = {Ensemble methods are learning algorithms that construct a set of classifiers and then classify new data points by taking a (weighted) vote of their predictions. The original ensemble method is Bayesian averaging, but more recent algorithms include error-correcting output coding, Bagging, and boosting. This paper reviews these methods and explains why ensembles can often perform better than any single classifier. Some previous studies comparing ensemble methods are reviewed, and some new experiments are presented to uncover the reasons that Adaboost does not overfit rapidly.},
+  isbn = {978-3-540-45014-6}
+}
+
+@article{DBLP:journals/corr/abs-1907-11692,
+  author = {Y. Liu and M. Ott and N. Goyal and J. Du and M. Joshi and D. Chen and O. Levy and M. Lewis and L. Zettlemoyer and V. Stoyanov},
+  title = {RoBERTa: {A} Robustly Optimized {BERT} Pretraining Approach},
+  journal = {CoRR},
+  volume = {abs/1907.11692},
+  year = {2019},
+  url = {http://arxiv.org/abs/1907.11692},
+  eprinttype = {arXiv},
+  eprint = {1907.11692},
+  timestamp = {Thu, 01 Aug 2019 08:59:33 +0200},
+  biburl = {https://dblp.org/rec/journals/corr/abs-1907-11692.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{xiao-etal-2019-label,
+  title = {Label-Specific Document Representation for Multi-Label Text Classification},
+  author = {Xiao, L. and Huang, X. and Chen, B. and Jing, L.},
+  booktitle = {Proceedings of the 2019 Conference on Empirical Methods in Natural Language Processing and the 9th International Joint Conference on Natural Language Processing (EMNLP-IJCNLP)},
+  month = nov,
+  year = {2019},
+  address = {Hong Kong, China},
+  publisher = {Association for Computational Linguistics},
+  url = {https://aclanthology.org/D19-1044},
+  doi = {10.18653/v1/D19-1044},
+  pages = {466--475},
+  abstract = {Multi-label text classification (MLTC) aims to tag most relevant labels for the given document. In this paper, we propose a Label-Specific Attention Network (LSAN) to learn a label-specific document representation. LSAN takes advantage of label semantic information to determine the semantic connection between labels and document for constructing label-specific document representation. Meanwhile, the self-attention mechanism is adopted to identify the label-specific document representation from document content information. In order to seamlessly integrate the above two parts, an adaptive fusion strategy is proposed, which can effectively output the comprehensive label-specific document representation to build multi-label text classifier. Extensive experimental results demonstrate that LSAN consistently outperforms the state-of-the-art methods on four different datasets, especially on the prediction of low-frequency labels. The code and hyper-parameter settings are released to facilitate other researchers.},
+}
